--- a/app/views/blog_posts/index.html.slim
+++ b/app/views/blog_posts/index.html.slim
@@ -1,33 +1,30 @@
-h1 Listing blog_posts
-
-table
-  thead
-    tr
-      th Media type
-      th Title
-      th Main image
-      th Video upload
-      th Body
-      th Seo title
-      th Seo meta description
-      th
-      th
-      th
-
-  tbody
+#entry_page
+  h1 Learning Center
+  = form_tag(blog_posts_path method: :get) do
+    = text_field_tag :title, params[:title]
+    = submit_tag 'Search'
+  .entry_filters
+    button id='all_media_button' all media
+    button id='articles_button' articles
+    button id='videos_button' videos
+  .entry_container
     - @blog_posts.each do |blog_post|
-      tr
-        td = blog_post.media_type
-        td = blog_post.title
-        td = blog_post.main_image
-        td = blog_post.video_upload
-        td = blog_post.body
-        td = blog_post.seo_title
-        td = blog_post.seo_meta_description
-        td = link_to 'Show', blog_post
-        td = link_to 'Edit', edit_blog_post_path(blog_post)
-        td = link_to 'Destroy', blog_post, data: { confirm: 'Are you sure?' }, method: :delete
+      = link_to(blog_post_url(blog_post))
+        .entry
+          .entry_image style='background-image: url(#{rails_blob_path(blog_post.main_image)})'
+          .entry_title
+            p = blog_post.title
+      / td = blog_post.media_type
+      / td = blog_post.title
+      / td = blog_post.main_image
+      / td = blog_post.video_upload
+      / td = blog_post.body
+      / td = blog_post.seo_title
+      / td = blog_post.seo_meta_description
+      / td = link_to 'Show', blog_post
+      / td = link_to 'Edit', edit_blog_post_path(blog_post)
+      / td = link_to 'Destroy', blog_post, data: { confirm: 'Are you sure?' }, method: :delete
 
-br
 
-= link_to 'New Blog post', new_blog_post_path
+
+  / = link_to 'New Blog post', new_blog_post_path
