--- a/app/views/blog_users/_form.html.slim
+++ b/app/views/blog_users/_form.html.slim
@@ -12,4 +12,7 @@
   .field
     = f.label :email
     = f.text_field :email
+  .field
+    = f.label :password
+    = f.text_field :password
   .actions = f.submit
