--- a/app/views/blog_posts/new.html.slim
+++ b/app/views/blog_posts/new.html.slim
@@ -1,5 +1,8 @@
-h1 New blog_post
+- if logged_in?
+  h1 New blog_post
 
-== render 'form'
+  == render 'form'
 
-= link_to 'Back', blog_posts_path
+  = link_to 'Back', blog_posts_path
+- else
+  = render file: "public/404.html"
