--- a/app/assets/stylesheets/blog_posts.sass
+++ b/app/assets/stylesheets/blog_posts.sass
@@ -1,34 +1,270 @@
 // Place all the styles related to the BlogPosts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@font-face
+  font-family: 'cerapro-regular'
+  src: font-url('cerapro-regular-webfont.woff') format('woff')
+@font-face
+  font-family: 'cerapro-thin'
+  src: font-url('cerapro-thin-webfont.woff') format('woff')
+@font-face
+  font-family: 'cerapro-bold'
+  src: font-url('cerapro-bold-webfont.woff') format('woff')
 
-#entry_page
+//COLORS
+$sfs-green: #39b54a
+$sfs-dark-grey: #929497
+$sfs-white-smoke: #f5f3f3
+
+.entry_page
   text-align: center
   max-width: 1000px
   width: 85%
   margin-left: auto
   margin-right: auto
-  form
-    width: 70%
-    margin-left: auto
-    margin-right: auto
+  font-family: 'cerapro-regular'
+  display: flex
+  flex-direction: column
+  align-items: center
+  h1
+    // font-family: 'cerapro-regular'
+    font-size: 3rem
+    letter-spacing: .25rem
+    margin-bottom: 4rem
+  .form-container
+    width: 100%
+    border: 2px solid black
+    margin-bottom: 3rem
+    form
+      width: 100%
+      display: flex
+      align-items: center
+      justify-content: center
+      input
+        font-family: 'cerapro-regular'
+        font-size: 1.5rem
+        border: none
+        text-align: center
+      #title
+        width: 100%
+        height: 3rem
+        border-color: black
+        padding-top: .2rem
+        padding-left: 1.75rem
+      #title::placeholder
+          text-align: center
+          font-family: 'cerapro-thin'
+          font-size: 1.5rem
+          padding-left: 1.5rem
+          color: black
+      input[type="image"]
+        height: 1.5rem
+        margin-right: .5rem
+  .entry_filters
+    width: 50%
+    display: flex
+    justify-content: space-between
+    margin-bottom: 2.5rem
+    button
+      width: 10rem
+      height: 2.5rem
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+      border: none
+      font-family: 'cerapro-bold'
+      font-size: 1rem
+      letter-spacing: .1rem
+      background-color: $sfs-white-smoke
+      &:hover
+        transform: scale(1.02)
+        color: white
+        background-color: $sfs-green
+    #all_media_button
+      background-color: $sfs-green
+      color: white
+  #all_container
+    width: 100%
+  #video_container
+    width: 100%
+    display: none
+  #article_container
+    width: 100%
+    display: none
   .entry_container
-    width: 70%
-    margin-left: auto
-    margin-right: auto
+    width: 100%
     display: grid
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr))
+    grid-template-columns: repeat(auto-fill, minmax(200px, 30%))
     grid-gap: 30px
     justify-content: space-between
+    align-items: center
+    a
+      text-decoration: none
+      &:hover
+        background: transparent
+        background-color: transparent
     .entry
-      width: 265px
-      height: 200px
-      margin-bottom: 50px
+      position: relative
+      width: 100%
+      height: 100%
+      margin-bottom: 25px
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
       transition: transform .3s
       &:hover
         transform: scale(1.02)
+      &:selector
       .entry_image
         width: 100%
         height: 150px
         background-size: cover
+      .entry_title
+        height: 50px
+        margin-left: .75rem
+        display: flex
+        align-items: center
+        color: black
+        p
+          text-align: left
+          font-family: 'cerapro-regular'
+          font-size: 1rem
+      input
+        position: absolute
+        width: 100%
+        right: 0
+        top: 16%
+        height: 5.5rem
+  .video_container
+    display: none
+
+  #see_more_button
+    width: 10rem
+    height: 3rem
+    background-color: black
+    color: white
+    font-family: 'cerapro-regular'
+    font-size: 1rem
+    margin-top: 5rem
+    margin-bottom: 10rem
+  #see_more_link
+      background: black
+      button
+        &:hover
+          cursor: pointer
+
+  #all_more_posts
+    display: none
+  #video_more_posts
+    display: none
+  #article_more_posts
+    display: none
+
+
+
+
+
+
+
+#body-container
+  display: flex
+  flex-direction: row
+  #body-right
+  #body-right-column
+    width: 90%
+    margin-right: auto
+    margin-left: auto
+    margin-top: 5rem
+    .entry_page
+      width: 100%
+    #text-box
+      width: 100%
+      height: 3rem
+      display: flex
+      align-items: center
+      justify-content: center
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+      border: none
+      background-color: $sfs-white-smoke
+      flex-direction: column
+      p
+        font-family: 'cerapro-bold'
+        font-size: 1.25rem
+        letter-spacing: 1px
+    #side-bar
+      margin-top: 3rem
+      width: 100%
+      .entry_container
+        display: flex
+        flex-direction: column
+        width: 100%
+        a
+          width: 100%
+          margin-bottom: 2rem
+    #questions-box
+      background-color: $sfs-green
+      display: flex
+      flex-direction: column
+      justify-content: center
+      height: 25rem
+      align-items: center
+      padding: 1rem
+      #questions-content
+        width: 100%
+        height: 95%
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        align-items: center
+        p
+          font-family: 'cerapro-regular'
+          color: white
+          font-size: 3rem
+          text-align: center
+          line-height: 3rem
+          margin-top: 0
+        button
+          width: 10rem
+          height: 3rem
+          background-color: black
+          color: white
+          font-family: 'cerapro-regular'
+          border: none
+          letter-spacing: 1px
+
+
+
+
+
+
+
+
+  #body-left
+    width: 80%
+    margin-left: 5rem
+    #title
+      width: 80%
+      height: auto
+      p
+        font-family: 'cerapro-regular'
+        font-size: 3.5rem
+        line-height: 4rem
+    iframe
+      width: 90%
+      height: 32rem
+    strong
+      font-family: 'cerapro-regular'
+      font-size: 3rem
+    p
+      font-family: 'cerapro-thin'
+    div
+      width: 90%
+      font-family: 'cerapro-regular'
+      font-size: 1rem
+      line-height: 2rem
+    #date
+      p
+        font-family: 'cerapro-bold'
+        font-size: 1.25rem
+        letter-spacing: 1px
+    #author
+      p
+        font-family: 'cerapro-regular'
+        font-size: 2rem
+        color: $sfs-green
