--- a/app/views/blog_posts/index.html.slim
+++ b/app/views/blog_posts/index.html.slim
@@ -70,6 +70,9 @@
     = link_to "javascript:seeMore('article')", id: "see_more_link"
       button id='see_more_button' SEE MORE
 
+  #bottom_message
+    p = "If you can't find what you're looking for, or would like to ask a question as a topic for a future article or video, please contact us below, adn we'll get back to you as soon as we can"
+
 
 / td = blog_post.media_type
 / td = blog_post.title
