--- a/app/views/blog_posts/show.html.slim
+++ b/app/views/blog_posts/show.html.slim
@@ -1,19 +1,22 @@
 #body-container
 
   #body-left
+    #bread_crumb
+      = render_breadcrumbs :separator => ' > '
     #title
       p
         = @blog_post.title
     - if @blog_post.media_type == 'Video Post'
-      iframe src="https://www.youtube.com/embed/CCsz6Gu1Gig"
+      iframe src= @blog_post.video_upload
       / = @blog_post.video_upload
     #date
       p
         = @blog_post.dateConversion()
     #author
       p By Sports Field Solutions
-    p
-      = raw @blog_post.body
+    #blog_body
+      p
+        = raw @blog_post.body
   #body-right
     #body-right-column
       #text-box
@@ -22,17 +25,19 @@
         #side-bar
           .entry_container
             - BlogPost.take(3).each_with_index do |blog_post, index|
-              = link_to(blog_post_url(blog_post))
-                .entry
-                  .entry_image style='background-image: url(#{rails_blob_path(blog_post.main_image)})'
-                  .entry_title
-                    p = blog_post.title
-      #questions-box
-        #questions-content
-          p HAVE QUESTIONS?
-          p WE HAVE ANSWERS.
-          = link_to "javascript:clicked('all')"
-            button id='questions-button' CONTACT US
+              - if blog_post.title == @blog_post.title                  
+              - else
+                = link_to(blog_post_url(blog_post))
+                  .entry
+                    .entry_image style='background-image: url(#{rails_blob_path(blog_post.main_image)})'
+                    .entry_title
+                      p = blog_post.title
+          #questions-box
+            #questions-content
+              p HAVE QUESTIONS?
+              p WE HAVE ANSWERS.
+              = link_to "javascript:clicked('all')"
+                button id='questions-button' CONTACT US
 
 
 
