--- a/app/views/blog_posts/show.html.slim
+++ b/app/views/blog_posts/show.html.slim
@@ -1,14 +1,15 @@
-#body-container
-
-  #body-left
-    #bread_crumb
-      = render_breadcrumbs :separator => ' > '
+#pre_blog_body
+  #bread_crumb
+    = render_breadcrumbs :separator => ' > '
+  #pre_blog_titles
     #title
       p
         = @blog_post.title
+#body-container
+  #body-left
     - if @blog_post.media_type == 'Video Post'
-      iframe src= @blog_post.video_upload
-      / = @blog_post.video_upload
+      #video_upload
+        iframe src= @blog_post.video_upload
     #date
       p
         = @blog_post.dateConversion()
@@ -25,7 +26,7 @@
         #side-bar
           .entry_container
             - BlogPost.take(3).each_with_index do |blog_post, index|
-              - if blog_post.title == @blog_post.title                  
+              - if blog_post.title == @blog_post.title
               - else
                 = link_to(blog_post_url(blog_post))
                   .entry
