Database search baby!!!!!

--- a/app/views/blog_posts/index.html.slim
+++ b/app/views/blog_posts/index.html.slim
@@ -1,7 +1,7 @@
 .entry_page
   h1 LEARNING CENTER
   .form-container
-    = form_tag(blog_posts_path method: :get) do
+    = form_tag(blog_posts_path, method: :get, role: 'search') do
       = text_field_tag :title, params[:title], placeholder: "SEARCH FOR A TOPIC..."
       = image_submit_tag("icons8-search-filled.svg")
   .entry_filters
