--- a/app/views/blog_posts/index.html.slim
+++ b/app/views/blog_posts/index.html.slim
@@ -73,7 +73,7 @@
       button id='see_more_button' SEE MORE
 
   #bottom_message
-    p = "If you can't find what you're looking for, or would like to ask a question as a topic for a future article or video, please contact us below, adn we'll get back to you as soon as we can"
+    p = "If you can't find what you're looking for, or would like to ask a question as a topic for a future article or video, please contact us below, and we'll get back to you as soon as we can."
 
 
 / td = blog_post.media_type
